# arena

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: lint.yml  rust.yml
contracts/utils/: foundry.toml
contracts/utils/src/: ArenaController.sol  ArenaToken.sol  Fetcher.sol  LiquidExchange.sol  LiquidityProvider.sol
contracts/utils/test/: LiquidityProvider.t.sol  ModifyLiquidityTest.sol
examples/: template_strategy.rs
src/: Cargo.toml  agent.rs  arbitrageur.rs  arena.rs  config.rs  deployer.rs  engine.rs  environment.rs  error.rs  feed.rs  inspector.rs  lib.rs  liquidity_admin.rs  orchestrator.rs  pool_admin.rs  price_changer.rs  strategy.rs  types.rs
src/artifacts/: ArenaController.json  ArenaToken.json  Fetcher.json  LiquidExchange.json  PoolManager.json  PoolModifyLiquidityTest.json  PoolSwapTest.json
src/bindings/: actionsrouter.rs  amounthelpers.rs  arenatoken.rs  balancedeltalibrary.rs  beforeswapdeltalibrary.rs  bitmath.rs  constants.rs  currencydelta.rs  currencylibrary.rs  currencysettler.rs  customcurvehook.rs  customrevert.rs  deltareturninghook.rs  deployers.rs  emptyreverthook.rs  erc20.rs  erc6909.rs  erc6909claims.rs  extsload.rs  exttload.rs  feetakinghook.rs  fetcher.rs  fixedpoint128.rs  fixedpoint96.rs  fixedpointmathlib.rs  fullmath.rs  fuzzers.rs  gassnapshot.rs  hooks.rs  ierc165.rs  ierc20.rs  ierc20minimal.rs  ierc6909claims.rs  ierc721.rs  ierc721enumerable.rs  ierc721metadata.rs  ierc721tokenreceiver.rs  iextsload.rs  iexttload.rs  ihooks.rs  (+55 more)
src/engine/: arbitrageur.rs  inspector.rs  mod.rs
src/types/: process.rs
