[package]
name = "arena-core"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/arena-rs/arena"
description = "Framework for holistic economic modelling and simulation of Uniswap v4 strategies, hooks and pools."
license-file = "./LICENSE"
exclude = ["contracts"]

[dependencies]
rug = "1.25.0"
rand = "0.8.5"
plotly = "0.9.0"
rand_distr = "0.4.3"
async-trait = "0.1.81"
alloy-contract = "0.2.1"
alloy-sol-macro = "0.7.7"
alloy-sol-types = "0.7.7"
tokio = { version = "1.39.2", features = ["macros"] }
alloy = { version = "0.2.1", features = ["full", "node-bindings", "json"] }